Printing onto the screen

--- a/limine.conf
+++ b/limine.conf
@@ -1,5 +1,11 @@
 timeout 3
 
-/osdev
+/osdev 1440x900
+    resolution: 11440x900
+    protocol: limine
+    path: boot():/boot/kernel.elf
+
+/osdev 1920x1080
+    resolution: 1920x1080
     protocol: limine
     path: boot():/boot/kernel.elf
