TAR, BRUN BLOND

--- a/limine.conf
+++ b/limine.conf
@@ -4,8 +4,10 @@ timeout 3
     resolution: 11440x900
     protocol: limine
     path: boot():/boot/kernel.elf
+    module_path: boot():/ramdisk.tar
 
 /osdev 1920x1080
     resolution: 1920x1080
     protocol: limine
     path: boot():/boot/kernel.elf
+    module_path: boot():/ramdisk.tar
